--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
     <script>
         function start_long_task() {
             // add task status elements
-            div = $('<div class="progress"><div></div><div>0%</div><div>...</div><div>&nbsp;</div></div><hr>');
+            let div = $('<div class="progress"><div></div><div>0%</div><div>...</div><div>&nbsp;</div></div><hr>');
             $('#progress').append(div);
-
+            console.log("hwq")
             // create a progress bar
             var nanobar = new Nanobar({
                 bg: '#44f',
